src/test/ui/shadowed/shadowed-use-visibility.stderr
error[E0603]: module `bar` is private
  --> $DIR/shadowed-use-visibility.rs:9:14
   |
LL |     use foo::bar::f as g;
   |              ^^^

error[E0603]: module `f` is private
  --> $DIR/shadowed-use-visibility.rs:15:10
   |
LL | use bar::f::f;
   |          ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
